--- a/public/test.html
+++ b/public/test.html
@@ -18,10 +18,20 @@
       font-size: 10px; line-height: 1.2; padding: 12px; background-color: #fff;
       border: 1px solid #ccc; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-    .vis-item {
-      font-size: 20px; padding: 0px 0px; background-color: #f5f5f5;
-      border: 1px solid #aaa; border-radius: 4px; max-width: 300px;
-    }
+.vis-item {
+  font-size: 10px;
+  /* 强制上下/左右内边距 */
+  padding-top: 0 !important;     /* 上 */
+  padding-bottom: 0 !important;  /* 下 */
+  padding-left: 1px !important;  /* 左 */
+  padding-right: 1px !important; /* 右 */
+
+  background-color: #f5f5f5;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  max-width: 300px;
+}
+
     #event-form, #filter-window, #add-filter-window {
       position: absolute; top: 20px; left: 50%; transform: translateX(-50%);
       background: #fff; padding: 20px; border: 1px solid #ccc;
