--- a/public/test.html
+++ b/public/test.html
@@ -31,7 +31,7 @@
   border-radius: 4px;
   max-width: 300px;
 }
-#timeline .vis-item .vis-item-content { padding: 0 2px !important; }
+#timeline .vis-item .vis-item-content { padding: 1px 0px !important; }
 
     #event-form, #filter-window, #add-filter-window {
       position: absolute; top: 20px; left: 50%; transform: translateX(-50%);
