--- a/public/test.html
+++ b/public/test.html
@@ -33,7 +33,7 @@
 }
 #timeline .vis-item .vis-item-content { padding: 1px 0 !important; }
 #timeline .vis-item .event-title {
-  margin: 0 !important;
+  margin: 1px !important;
   line-height: 1 !important; /* 需要更紧凑可以 0.98～1.05 间微调 */
 }
     
