--- a/public/test.html
+++ b/public/test.html
@@ -33,8 +33,8 @@
 }
 #timeline .vis-item .vis-item-content { padding: 1px 0 !important; }
 #timeline .vis-item .event-title {
-  margin: 1px !important;
-  line-height: 2 !important; /* 需要更紧凑可以 0.98～1.05 间微调 */
+  margin: 0 !important;
+  line-height: 3 !important; /* 需要更紧凑可以 0.98～1.05 间微调 */
 }
     
     #event-form, #filter-window, #add-filter-window {
