--- a/public/test.html
+++ b/public/test.html
@@ -18,19 +18,10 @@
       font-size: 10px; line-height: 1.2; padding: 12px; background-color: #fff;
       border: 1px solid #ccc; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-#timeline .vis-item {
-  font-size: 10px;
-  /* 强制上下/左右内边距 */
-  padding-top: 0 !important;     /* 上 */
-  padding-bottom: 0 !important;  /* 下 */
-  padding-left: 1px !important;  /* 左 */
-  padding-right: 1px !important; /* 右 */
-
-  background-color: #f5f5f5;
-  border: 1px solid #aaa;
-  border-radius: 4px;
-  max-width: 300px;
-}
+    .vis-item {
+      font-size: 10px; padding: 1px 2px; background-color: #f5f5f5;
+      border: 1px solid #aaa; border-radius: 4px; max-width: 300px;
+    }
 
 #timeline .vis-item .event-title {
   margin: 0 !important;
