--- a/public/viewer.html
+++ b/public/viewer.html
@@ -22,6 +22,10 @@
       font-size: 10px; padding: 1px 2px; background-color: #f5f5f5;
       border: 1px solid #aaa; border-radius: 4px; max-width: 300px;
     }
+    #timeline .vis-item .event-title {
+  margin: 0 !important;
+  line-height: 1.5 !important; /* 需要更紧凑可以 0.98～1.05 间微调 */
+}
     #event-form, #filter-window, #add-filter-window {
       position: absolute; top: 20px; left: 50%; transform: translateX(-50%);
       background: #fff; padding: 20px; border: 1px solid #ccc;
